# GrandFantasia-ChatLogger

./: Cargo.toml  README.md  chat_logger_settings.json
src/: main.rs
